--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
   <link rel="stylesheet" href="pages/index.css">
   <title>Путешествия по России</title>
 </head>
-<body>
-
+<body class="page">
+  <div class="header">
+    <img class="header__logo" src="./images/header__logo.png">
+      <div class="header__lang-links">
+        <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
+        <a class="header__lang-link" href="#">En</a>
+      </div>
+  </div>
 
 </body>
 </html>
