--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <a class="header__lang-link" href="#">En</a>
       </div>
   </div>
+  <div class="lead">
+    <h1 class="lead__title">Путешествия по России</h1>
+  </div>
 
 </body>
 </html>
