Finished photo-grid

--- a/index.html
+++ b/index.html
@@ -31,5 +31,19 @@
       <li>Аэропортов <span class="intro__list_type_number">241</span></li>
     </ul>
   </div>
+  <div class="photo-grid">
+    <img class="photo-grid__item" src="images/photo-grid__item01.png">
+    <img class="photo-grid__item" src="images/photo-grid__item02.png">
+    <img class="photo-grid__item" src="images/photo-grid__item03.png">
+    <img class="photo-grid__item" src="images/photo-grid__item04.png">
+    <img class="photo-grid__item" src="images/photo-grid__item05.png">
+    <img class="photo-grid__item" src="images/photo-grid__item06.png">
+    <img class="photo-grid__item" src="images/photo-grid__item07.png">
+    <img class="photo-grid__item" src="images/photo-grid__item08.png">
+    <img class="photo-grid__item" src="images/photo-grid__item09.png">
+    <img class="photo-grid__item" src="images/photo-grid__item10.png">
+    <img class="photo-grid__item" src="images/photo-grid__item11.png">
+    <img class="photo-grid__item" src="images/photo-grid__item12.png">
+  </div>
 </body>
 </html>
