--- a/index.html
+++ b/index.html
@@ -134,7 +134,16 @@
     </div>
   </section>
   <section class="footer">
-
+    <nav>
+      <ul class="footer__links">
+        <li class="footer__list"><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+        <li class="footer__list"><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+        <li class="footer__list"><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+        <li class="footer__list"><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+        <li class="footer__list"><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
+      </ul>
+    </nav>
+    <p class="footer__copyright">&copy; 2020. Руслан Лукичев</p>
   </section>
 </body>
 </html>
