--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
   <title>Путешествия по России</title>
 </head>
 <body class="page">
-  <section class="header">
-    <img class="header__logo" src="./images/header__logo.png">
+  <header class="header">
+    <img class="header__logo" src="./images/header__logo.png" alt="Логотип в виде карты России">
       <div class="header__lang-links">
         <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
         <a class="header__lang-link" href="#">En</a>
-      </section>
+      </header>
   </div>
+  <main>
   <section class="lead">
-    <h1 class="lead__title">Путешествия по России</h1>
+    <h1 class="lead__title">Путешествия по&nbsp;России</h1>
     <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
-  <div class="lead__image"></div>
+  <img class="lead__image" src="./images/lead__image.png" alt="Спящий в вагоне поезда человек">
   <p class="lead__caption">Ваша полка — верхняя</p>
   </section>
   <section class="intro">
@@ -32,18 +33,18 @@
     </ul>
   </section>
   <section class="photo-grid">
-    <img class="photo-grid__item" src="images/photo-grid__item01.png">
-    <img class="photo-grid__item" src="images/photo-grid__item02.png">
-    <img class="photo-grid__item" src="images/photo-grid__item03.png">
-    <img class="photo-grid__item" src="images/photo-grid__item04.png">
-    <img class="photo-grid__item" src="images/photo-grid__item05.png">
-    <img class="photo-grid__item" src="images/photo-grid__item06.png">
-    <img class="photo-grid__item" src="images/photo-grid__item07.png">
-    <img class="photo-grid__item" src="images/photo-grid__item08.png">
-    <img class="photo-grid__item" src="images/photo-grid__item09.png">
-    <img class="photo-grid__item" src="images/photo-grid__item10.png">
-    <img class="photo-grid__item" src="images/photo-grid__item11.png">
-    <img class="photo-grid__item" src="images/photo-grid__item12.png">
+    <img class="photo-grid__item" src="images/photo-grid__item01.png" alt="Природный пейзаж">
+    <img class="photo-grid__item" src="images/photo-grid__item02.png" alt="Природный пейзаж">
+    <img class="photo-grid__item" src="images/photo-grid__item03.png" alt="Природный пейзаж">
+    <img class="photo-grid__item" src="images/photo-grid__item04.png" alt="Природный пейзаж">
+    <img class="photo-grid__item" src="images/photo-grid__item05.png" alt="Природный пейзаж">
+    <img class="photo-grid__item" src="images/photo-grid__item06.png" alt="Природный пейзаж">
+    <img class="photo-grid__item" src="images/photo-grid__item07.png" alt="Природный пейзаж">
+    <img class="photo-grid__item" src="images/photo-grid__item08.png" alt="Природный пейзаж">
+    <img class="photo-grid__item" src="images/photo-grid__item09.png" alt="Природный пейзаж">
+    <img class="photo-grid__item" src="images/photo-grid__item10.png" alt="Природный пейзаж">
+    <img class="photo-grid__item" src="images/photo-grid__item11.png" alt="Природный пейзаж">
+    <img class="photo-grid__item" src="images/photo-grid__item12.png" alt="Природный пейзаж">
   </section>
   <section class="places">
     <div class="place">
@@ -52,7 +53,7 @@
         <p class="place__url-heading">URL</p>
         <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
         </div>
-        <img class="place__image" src="images/place__image01.png">
+        <img class="place__image" src="images/place__image01.png" alt="Куршская коса">
         <div class="place__paragraphs">
           <p class="place__paragraph">
             Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.
@@ -68,7 +69,7 @@
         <p class="place__url-heading">URL</p>
         <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
         </div>
-        <img class="place__image" src="images/place__image02.png">
+        <img class="place__image" src="images/place__image02.png" alt="Кольский полуостров">
         <div class="place__paragraphs">
           <p class="place__paragraph">
             Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
@@ -86,7 +87,7 @@
         <p class="place__url-heading">URL</p>
         <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
         </div>
-        <img class="place__image" src="images/place__image03.png">
+        <img class="place__image" src="images/place__image03.png" alt="Алтай">
         <div class="place__paragraphs">
           <p class="place__paragraph">
             Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.
@@ -102,7 +103,7 @@
         <p class="place__url-heading">URL</p>
         <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
         </div>
-        <img class="place__image" src="images/place__image04.png">
+        <img class="place__image" src="images/place__image04.png" alt="Зимний Байкал">
         <div class="place__paragraphs">
           <p class="place__paragraph">
             Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
@@ -118,7 +119,7 @@
         <p class="place__url-heading">URL</p>
         <a class="place__link" href="http://vodlozero.ru/" target="_blank">http://vodlozero.ru/</a>
         </div>
-        <img class="place__image" src="images/place__image05.png">
+        <img class="place__image" src="images/place__image05.png" alt="Карелия">
         <div class="place__paragraphs">
           <p class="place__paragraph">
             Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
@@ -128,12 +129,12 @@
   </section>
   <section class="cover">
     <div class="cover__background">
-      <div class="cover__overlay"></div>
-      <h2 class="cover__title">До Байкала на собаках</h2>
+      <h2 class="cover__title">До Байкала</br>«на собаках»</h2>
       <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
     </div>
   </section>
-  <section class="footer">
+  </main>
+  <footer class="footer">
     <nav>
       <ul class="footer__links">
         <li class="footer__list"><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
@@ -144,6 +145,6 @@
       </ul>
     </nav>
     <p class="footer__copyright">&copy; 2020. Руслан Лукичев</p>
-  </section>
+  </footer>
 </body>
 </html>
