Ready for the first review

--- a/index.html
+++ b/index.html
@@ -128,10 +128,12 @@
     </div>
   </section>
   <section class="cover">
-    <div class="cover__background">
-      <h2 class="cover__title">До Байкала</br>«на собаках»</h2>
+    <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
+      <div class="cover__background">
+      <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
       <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
-    </div>
+      </div>
+    </a>
   </section>
   </main>
   <footer class="footer">
