--- a/index.html
+++ b/index.html
@@ -8,52 +8,54 @@
 </head>
 <body class="page">
   <header class="header">
-    <img class="header__logo" src="./images/header__logo.png" alt="Логотип в виде карты России">
+    <img class="header__logo" src="./images/header__logo.svg" alt="Логотип в виде карты России">
       <div class="header__lang-links">
         <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
         <a class="header__lang-link" href="#">En</a>
-      </header>
-  </div>
+      </div>
+  </header>
   <main>
   <section class="lead">
     <h1 class="lead__title">Путешествия по&nbsp;России</h1>
-    <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
-  <img class="lead__image" src="./images/lead__image.png" alt="Спящий в вагоне поезда человек">
-  <p class="lead__caption">Ваша полка — верхняя</p>
+    <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+    <figure class="lead__figure">
+      <img class="lead__image" src="./images/lead__image.jpg" alt="Спящий в вагоне поезда человек">
+      <figcaption class="lead__caption">Ваша полка — верхняя</figcaption>
+    </figure>
   </section>
   <section class="intro">
     <h2 class="intro__title">Чего мы там не видели?</h2>
     <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
     <ul class="intro__list">
       <li>Часовых поясов <span class="intro__list_type_number">11</span></li>
-      <li>Объектов природного наследия ЮНЕСКО <span class="intro__list_type_number">12</span></li>
-      <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list_type_number">16</span></li>
-      <li>Природных заповедников <span class="intro__list_type_number">105</span></li>
-      <li>Аэропортов <span class="intro__list_type_number">241</span></li>
+      <li>Объектов природного наследия ЮНЕСКО <span class="intro__list intro__list_type_number">12</span></li>
+      <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list intro__list_type_number">16</span></li>
+      <li>Природных заповедников <span class="intro__list intro__list_type_number">105</span></li>
+      <li>Аэропортов <span class="intro__list intro__list_type_number">241</span></li>
     </ul>
   </section>
   <section class="photo-grid">
-    <img class="photo-grid__item" src="images/photo-grid__item01.png" alt="Природный пейзаж">
-    <img class="photo-grid__item" src="images/photo-grid__item02.png" alt="Природный пейзаж">
-    <img class="photo-grid__item" src="images/photo-grid__item03.png" alt="Природный пейзаж">
-    <img class="photo-grid__item" src="images/photo-grid__item04.png" alt="Природный пейзаж">
-    <img class="photo-grid__item" src="images/photo-grid__item05.png" alt="Природный пейзаж">
-    <img class="photo-grid__item" src="images/photo-grid__item06.png" alt="Природный пейзаж">
-    <img class="photo-grid__item" src="images/photo-grid__item07.png" alt="Природный пейзаж">
-    <img class="photo-grid__item" src="images/photo-grid__item08.png" alt="Природный пейзаж">
-    <img class="photo-grid__item" src="images/photo-grid__item09.png" alt="Природный пейзаж">
-    <img class="photo-grid__item" src="images/photo-grid__item10.png" alt="Природный пейзаж">
-    <img class="photo-grid__item" src="images/photo-grid__item11.png" alt="Природный пейзаж">
-    <img class="photo-grid__item" src="images/photo-grid__item12.png" alt="Природный пейзаж">
+    <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="Вид из окна поезда">
+    <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="Снежные вершины гор в облаках">
+    <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="Туман в поле">
+    <img class="photo-grid__item" src="images/photo-grid-sochi.jpg" alt="Лес в горах">
+    <img class="photo-grid__item" src="images/photo-grid-arisa.jpg" alt="Колесо машины, едущей по льду">
+    <img class="photo-grid__item" src="images/photo-grid-baikal.jpg" alt="Побережье озера Байкал">
+    <img class="photo-grid__item" src="images/photo-grid-elbrus.jpg" alt="Заснеженные вершины Эльбруса">
+    <img class="photo-grid__item" src="images/photo-grid-kondratiev.jpg" alt="Знак пешеходный переход">
+    <img class="photo-grid__item" src="images/photo-grid-kamchatka-1.jpg" alt="Природный пейзаж Камчатки">
+    <img class="photo-grid__item" src="images/photo-grid-kamchatka-2.jpg" alt="Гора на Камчатке">
+    <img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="Зимний пейзаж на озере Байкал">
+    <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="Горный хребет Ергаки">
   </section>
   <section class="places">
-    <div class="place">
+    <article class="place">
       <h2 class="place__title">Куршская коса</h2>
         <div class="place__website">
-        <p class="place__url-heading">URL</p>
-        <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
+        <p class="place__url-heading">Url</p>
+        <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
         </div>
-        <img class="place__image" src="images/place__image01.png" alt="Куршская коса">
+        <img class="place__image" src="images/place-kosa.jpg" alt="Куршская коса">
         <div class="place__paragraphs">
           <p class="place__paragraph">
             Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.
@@ -62,14 +64,14 @@
             На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
           </p>
         </div>
-    </div>
-    <div class="place">
+    </article>
+    <article class="place">
       <h2 class="place__title">Кольский</h2>
         <div class="place__website">
-        <p class="place__url-heading">URL</p>
+        <p class="place__url-heading">Url</p>
         <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
         </div>
-        <img class="place__image" src="images/place__image02.png" alt="Кольский полуостров">
+        <img class="place__image" src="images/place-kolsky.jpg" alt="Кольский полуостров">
         <div class="place__paragraphs">
           <p class="place__paragraph">
             Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
@@ -80,14 +82,14 @@
             в Мурманск.
           </p>
         </div>
-    </div>
-    <div class="place">
+    </article>
+    <article class="place">
       <h2 class="place__title">Алтай</h2>
         <div class="place__website">
-        <p class="place__url-heading">URL</p>
+        <p class="place__url-heading">Url</p>
         <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
         </div>
-        <img class="place__image" src="images/place__image03.png" alt="Алтай">
+        <img class="place__image" src="images/place-altai.jpg" alt="Алтай">
         <div class="place__paragraphs">
           <p class="place__paragraph">
             Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.
@@ -96,14 +98,14 @@
             Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.
           </p>
         </div>
-    </div>
-    <div class="place">
+    </article>
+    <article class="place">
       <h2 class="place__title">Зимний Байкал</h2>
         <div class="place__website">
-        <p class="place__url-heading">URL</p>
+        <p class="place__url-heading">Url</p>
         <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
         </div>
-        <img class="place__image" src="images/place__image04.png" alt="Зимний Байкал">
+        <img class="place__image" src="images/place-winter-baikal.jpg" alt="Зимний Байкал">
         <div class="place__paragraphs">
           <p class="place__paragraph">
             Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
@@ -112,26 +114,26 @@
             Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
           </p>
         </div>
-    </div>
-    <div class="place">
+    </article>
+    <article class="place">
       <h2 class="place__title">Карелия</h2>
         <div class="place__website">
-        <p class="place__url-heading">URL</p>
+        <p class="place__url-heading">Url</p>
         <a class="place__link" href="http://vodlozero.ru/" target="_blank">http://vodlozero.ru/</a>
         </div>
-        <img class="place__image" src="images/place__image05.png" alt="Карелия">
+        <img class="place__image" src="images/place-karelia.jpg" alt="Карелия">
         <div class="place__paragraphs">
           <p class="place__paragraph">
             Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
           </p>
         </div>
-    </div>
+    </article>
   </section>
   <section class="cover">
-    <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
-      <div class="cover__background">
-      <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
-      <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
+     <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
+        <div class="cover__background">
+          <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
       </div>
     </a>
   </section>
